--- a/style.css
+++ b/style.css
@@ -1,1 +1,42 @@
 /* Your CSS styles go here */
+body {
+    background: url("KAK_0691.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    color: Black;
+    font-size: 40px;
+}
+h2{
+	color:Black;
+	font-size: 30px;
+}
+h3{
+	color:Black;
+	font-size: 30px;
+}
+h4{
+	color:Black;
+	font-size: 30px;
+}
+h5{
+	color:Black;
+	font-size: 30px;
+}
+p {
+    color: black;
+    font-size: 20px;
+    font: cursive;
+    text-align:  center;
+}
+
+table{
+	td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding-;left: : 100px;
+}
+}
+
